--- a/css/flexbox/index.css
+++ b/css/flexbox/index.css
@@ -1,6 +1,7 @@
 @import './display-flex.css';
 @import './flex-order.css';
 @import './flex-direction.css';
+@import './flex-wrap.css';
 
 :root {
   --darkColor: #04001e;
