Alineamiento justify-content align-items

--- a/css/flexbox/index.css
+++ b/css/flexbox/index.css
@@ -3,6 +3,8 @@
 @import './flex-direction.css';
 @import './flex-wrap.css';
 @import './flex.css';
+@import './justify-content.css';
+@import './align-items.css';
 
 :root {
   --darkColor: #04001e;
