Estilos para íconos

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import './icons.css';
+
 :root {
   --primary: #00B050;
   --white: #ffffff;
@@ -7,4 +9,8 @@
   --gray40: #181818;
   --gray50: #121212;
   --gray60: #000000;
+}
+
+body {
+  background: var(--primary);
 }
