--- a/css/index.css
+++ b/css/index.css
@@ -14,3 +14,12 @@
 body {
   background: var(--primary);
 }
+
+button {
+  font-size: 40px;
+  color: green;
+}
+
+button:hover {
+  color: black;
+}
