--- a/css/playlist-a.css
+++ b/css/playlist-a.css
@@ -20,7 +20,9 @@
 }
 
 .playlistA-cover img{
-  vertOPical-align: middle;
+  vertical-align: middle;
+  inline-size: 100%;
+  block-size: auto;
 }
 .playlistA-cover {
   position: relative;
