--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 @import './player.css';
 @import './playlist-a.css';
 @import './playlist-b.css';
+@import './playlistList.css';
 
 :root {
   font-size: 16px;
