Formulario de búsqueda

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
 @import './playlist-a.css';
 @import './playlist-b.css';
 @import './playlistList.css';
+@import './search.css';
 
 :root {
   font-size: 16px;
