--- a/css/playlistList.css
+++ b/css/playlistList.css
@@ -6,11 +6,16 @@
   padding-block-end: .5rem;
   padding-block-start: .5rem;
   margin-block-end: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 .playlistList-title {
   font: var(--headline2);
   color: var(--white);
+  margin: 0;
 }
 
 .playlistList-container {
